# prednet_in_chainer_py3

./: README.rst  pyproject.toml
PredNet/: csv_serializer.py  generate_image.py  main.py  net.py
