[tool.poetry]
name = "pcdnn_s11"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.5.3"
Pillow = "^8.3.2"
tqdm = "^4.62.3"
chainer = "^7.8.0"
cupy = "^9.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
